# jercept

./: CHANGELOG.md  README.md  SECURITY.md
jercept/: .gitignore  CONTRIBUTING.md  pyproject.toml
jercept-js/: LICENSE  (+2 more)
jercept/.github/workflows/: test.yml
jercept/benchmarks/: latency.py
jercept/examples/: demo_ambiguous.py  demo_attack_blocked.py  demo_langchain.py
jercept/jercept/: __init__.py  cli.py  decorators.py  linter.py  logging.py  policy.py  protect.py
jercept/jercept-dashboard/: DEPLOY.md  Dockerfile  railway.toml
jercept/jercept-dashboard/backend/: auth.py  crypto.py  database.py  main.py  models.py  ratelimit.py  requirements.txt
jercept/jercept-dashboard/frontend/: dashboard.html  dashboard.js  index.html  styles.css
jercept/jercept/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  llamaindex_adapter.py  mcp_adapter.py  openai_adapter.py
jercept/jercept/core/: __init__.py  conversation.py  enforcer.py  exceptions.py  extractor.py  fast_extractor.py  injection_scanner.py  intent_cache.py  providers.py  scope.py  semantic_scanner.py
jercept/jercept/telemetry/: __init__.py  client.py  notifier.py
jercept/tests/: conftest.py  test_architecture_fixes.py  test_async_extractor.py  test_autogen_adapter.py  test_cli.py  test_conversation_scope.py  test_cross_language_vectors.py  test_decorators.py  test_enforcer.py  test_extractor.py  test_fast_extractor.py  test_fast_extractor_new_patterns.py  test_injection_scanner.py  test_injection_scanner_v2.py  test_injection_scanner_v3.py  test_integration.py  test_linter.py  test_llamaindex_adapter.py  test_mcp_adapter.py  test_policy.py  test_policy_loaders.py  test_providers.py  test_scope.py  test_scope_v2.py  test_scope_wildcard.py  test_security_fixes.py  test_semantic_scanner.py  test_webhook_notifier.py
(+17 files in other folders)
